--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img class="logo" src="./logos/logo.796b4e7a.svg" alt="" />
         </div>
       </nav>
-      <h1>JetBlue - Belize Retail 2023 Route 1</h1>
+      <h1>JetBlue - 2024 Retail More Blue</h1>
       <div class="list">
         <span
           >-
